--- a/Dockerfile-publish
+++ b/Dockerfile-publish
@@ -2,7 +2,7 @@ FROM java
 
 LABEL maintainer "Monkey"
 
-COPY /springbootdemo/target/demo-0.0.1-SNAPSHOT.jar /usr/src/myapp/demo-0.0.1-SNAPSHOT.jar
+COPY /project/target/demo-0.0.1-SNAPSHOT.jar /usr/src/myapp/demo-0.0.1-SNAPSHOT.jar
 
 WORKDIR /usr/src/myapp/
 
